# legendary-adventure

./: LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yml
src/example/: math_functions.py  string_functions.py
tests/: conftest.py  test_db.py  test_math_functions.py  test_string_functions.py
