[metadata]
name = legendary-adventure
description = trying optimal repository setup
author = Aaron Braatz
license = MIT
license_file = LICENSE
platforms = unix, linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    example
install_requires =
    requests>=2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[option.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[option.package_data]
math = py.typed

[flake8]
max-line-length = 160
